# workspace_generator

./: CMakeLists.txt  README.md  libs
assets/: cpp_template.yaml
docs/: plan.md
src/: CMakeLists.txt  functions.cpp  main.cpp  rough_work.cpp
tests/: test  test.cpp
